# QT_YOLOInferencer

./: CMakeLists.txt  cameraworker.cpp  cameraworker.h  classes.txt  images.qrc  inference.cpp  inference.h  main.cpp  photoworker.cpp  photoworker.h  widget.cpp  widget.h  widget.ui
logo/: logo.rc
